--- a/BookMovieApp/src/common/header/Header.css
+++ b/BookMovieApp/src/common/header/Header.css
@@ -21,9 +21,18 @@
     flex : auto; 
 }
 
-.login-button{
-    height: 30px;
+.login-modal{
+    position: absolute; 
+    width:  500px;
+    background-color : white; 
+    padding: 4px; 
+    outline: none,
+}
+
+.header-button{
+    height: 25px;
     margin-bottom:18px !important; 
+    margin-left: 10px !important;
 }
 
 @-webkit-keyframes rotation {
