--- a/BookMovieApp/src/screens/home/Home.css
+++ b/BookMovieApp/src/screens/home/Home.css
@@ -4,3 +4,25 @@
     text-align: center;
     font-size: 1rem;
 }
+
+.released-movies-container{
+    display:  flex;
+    align-items: stretch;
+    flex-direction:  row;
+}
+
+.released-movies{
+    flex-grow : 19; 
+    margin : 16px; 
+}
+
+.movie-filter{
+    flex-grow : 6; 
+    margin : 16px;
+}
+
+.released-movie-hover{
+    cursor: pointer !important;
+}
+
+
