--- a/BookMovieApp/src/screens/details/Details.css
+++ b/BookMovieApp/src/screens/details/Details.css
@@ -15,6 +15,8 @@
 }
 .movie-details-right{
     flex-basis: 20%;
+    margin-top : 30px;
+    margin-right: 24px !important;
 }
 
 .back-to-home{
@@ -26,6 +28,11 @@
 
 .movie-poster{
     margin-left : 24px; 
+}
+
+.artists-title{
+    margin-top : 16px; 
+    margin-bottom : 16px; 
 }
 
 
