--- a/BookMovieApp/src/screens/details/Details.css
+++ b/BookMovieApp/src/screens/details/Details.css
@@ -24,6 +24,7 @@
     margin-top:8px !important;
     margin-bottom: 0px !important;
     cursor: pointer !important;
+    text-decoration: none;
 }
 
 .movie-poster{
